--- a/1_linear_regression_model.ipynb
+++ b/1_linear_regression_model.ipynb
@@ -2,16 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Use shift-enter to execute a code block and move to the next one."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -25,11 +30,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x10fc7d9e8>]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAX0AAAD8CAYAAACb4nSYAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAG7xJREFUeJzt3X+Q3PV93/Hn604ctrBTrkiZifUDgRGZCOxp4QpK3dTF\nBiobKjXG6cg4DenYVUmkxgmZjJ0po1JlOsWkpabTK1SlpE1iomCgHRUr1ZREGbueyNadDElOHsNZ\nRnDEUwt8MUNVI+nu3T/2u/JqdXv73d3vfr/73e/rMaNhv7vfvf18T+K1n+/78/l+vooIzMysGkaK\nboCZmeXHoW9mViEOfTOzCnHom5lViEPfzKxCHPpmZhXi0DczqxCHvplZhTj0zcwqZEXRDWi2atWq\n2LBhQ9HNMDMrlenp6dciYnW7/QYu9Dds2MDU1FTRzTAzKxVJJ9Ls5/KOmVmFOPTNzCrEoW9mViEO\nfTOzCnHom5lViEPfzKxCHPpmZjmZPjHP5KFZpk/MF9aGgZunb2Y2jKZPzPPxRw9z+uwiYytG+Pwn\nN3P95eO5t8M9fTOzHBw+/jqnzy6yGHDm7CKHj79eSDsc+mZmOdh85WWMrRhhVHDRihE2X3lZIe1w\necfMLAfXXz7O5z+5mcPHX2fzlZcVUtoBh76Z2ZKmT8xnHtDXXz5eWNjXOfTNzJoMyqBrP7imb2bW\nZFAGXfvBoW9m1mRQBl37weUdM7MmeQy69mPMIA2HvpnZEvo56FrkmIHLO2ZmOStyzMChb2aWsyLH\nDFKFvqQtkr4paVbSZ5bZ7w5JIWmi4blfT973TUl/N4tGm5mVWX3M4J5bfzz36aBta/qSRoFJ4BZg\nDjgiaX9EHGva753Ap4CvNjy3CdgOXAO8C3hW0tURsZDdIZiZlU9RF2ql6enfAMxGxPGIOA3sA7Yt\nsd9vAJ8FftDw3DZgX0S8FRHfBmaTn2dmZgVIE/prgFcatueS586RdB2wLiK+2Ol7zcwsPz0P5Eoa\nAR4EfrWHn7FD0pSkqZMnT/baJDMzayFN6L8KrGvYXps8V/dO4FrgjyW9BGwG9ieDue3eC0BE7I2I\niYiYWL16dWdHYGZmqaUJ/SPARklXSBqjNjC7v/5iRHw/IlZFxIaI2AAcBrZGxFSy33ZJF0u6AtgI\nfC3zozAzs1Tazt6JiLOSdgEHgVHgsYiYkbQHmIqI/cu8d0bSE8Ax4Cyw0zN3zMyKo4goug3nmZiY\niKmpqaKbYWZWKpKmI2Ki3X6+ItfMrEIc+mZmOZk+Mc/koVmmT8wX1gavsmlmloN2K2vmtdSyQ9/M\nhlZRa9YvZamVNettynOpZYe+mQ2lQbvP7fjKMUYkiLhgZc3lvhCy5pq+mQ2lrNasz6IOP31inj3P\nzLAYwciI2H37NeeFep5LLbunb2ZDqR6kZ84udh2kWZ0tNH4BiWD+1OnzXs/j9ox1Dn0zG0pZBGlW\nZZc0X0B5LbXs0DezodVrkNbD+vTZRSQxvnKs63bk1ZNvxzV9Myutfs97v/7ycXbffg0jEguLwZ5n\nZrr+rOsvH2fnTVcVPovIPX0zK6W8ZufMnzrNwmIQwOkz/Z1Zkwf39M2slLKandPO+Mox6iuULSbb\nZeaevpmVSv2Cq/GVYz3Pzklj/tRpRgSLASPigpk3ZePQN7PSaC7p7L79GuZPne7r4GgWUz8HiUPf\nzEqjuaQzf+o0O2+6qq+fOUgzb7Lgmr6ZlUZeV642zwqqz7wBCl8ls1fu6ZtZaeTR6241K2jQ1vLp\nlkPfzEql31eutroKN89F0frJ5R0zK8Qg3FBkKa1KSHkuitZPvkeumeUu61JJ1uvmt/p5g7Q+f7O0\n98h1ecfMcpdlqaQftfZWJaS8FkXrJ5d3zCx3WZZK8royd1i4p29muctyFs6wXTzVb6lq+pK2AA8B\no8CjEXF/0+t3AzuBBeBNYEdEHJN0EfAocB21L5jfjoh/tdxnuaZvlr28a9HD/nmDKLOavqRRYBK4\nBZgDjkjaHxHHGnZ7PCIeSfbfCjwIbAF+Brg4It4jaSVwTNLvRcRLHR+RmXUl7/nlWX5e2jAfhlp7\nXtKUd24AZiPiOICkfcA24FzoR8QbDftfAucWpQvgEkkrgLcDp4HGfc2sz/o9v7wxmAE+9+wLmXze\nsFwMNWjShP4a4JWG7TngxuadJO0E7gHGgA8kTz9J7QviO8BK4Fci4nu9NNjMOtPPmndjMK8YEUic\nObtIUFuRspfPy/rLyiWgmswGciNiEpiUdCdwL3AXtbOEBeBdwDjwZUnP1s8a6iTtAHYArF+/Pqsm\nmRn9XbrgvGBeCKB2s5ER4H1XreKXb76668/L8svKZw0/lCb0XwXWNWyvTZ5rZR/wcPL4TuB/RsQZ\n4LuSvgJMAOeFfkTsBfZCbSA3XdPNLK1+1bwbg3k06ekvLNRCupfAh2y/rIZlCYUspAn9I8BGSVdQ\nC/vt1ML8HEkbI+LFZPM2oP74ZWqlnt+RdAmwGfhcFg03s870o7zRHMxApp+R1ZeVp3X+UNopmx+m\nFtajwGMR8S8l7QGmImK/pIeAm4EzwDywKyJmJL0D+C1gEyDgtyLiN5f7LE/ZNMteWcob/ay7D3tN\nP9NlGCLiAHCg6bndDY8/1eJ9b1KbtmlmBSpDeaPfX0ye1lnjZRjMKmCQVohstbqml1PIh5dhMKuA\nNIOieZQ/luvNu+6eD4e+WUUsV95YKozhwkHZXr8YliszDdu9aAeVQ9/MLgjjp47O8fTRuQu+BHqt\nubfrzbvu3n8OfbMhlrZn3hzGgiXr670OBrs3XzyHvtmQ6mQ2zFLz7Z86OndBjzyLmrt788Vy6JsN\nqU6naTaH8VI9cvfSy8+hbzaAsphJ0+tsmKV65J320rs5jmG/iKpoDn2zAZPVRUp51s+XCupujqMs\nVw6XmUPfbMA8dXSOt87UliduV5Zp1yvOo37eKqi7uQq4DFcOl51D32yATJ+Y58npuXN3IRodUcuy\nzKD0ilsFdTflJV+g1X8OfbMBcvj465xdWARqKxT+zMS6lkHeTa+43ZlBN/X0VkHdTXnJUzr7z6Fv\nNkCaA/Qj161NvW+7XnG7M4NuzxyWC+puykue0tlfDn2zAdJJT7fTXnG7M4O0Zw5LnQ04qMvDoW+W\nsV6nHHYSoJ3s2+7MIM2ZQ9bjCJ6emT+HvlmGBmVwdSntzgzSnDlkObtmkH9Xw8yhb5ahQZ9y2O7M\noN3rWc6uGfTf1bBy6JtlaNinHGY5u2bYf1eDKtU9cvPke+Ra2blOnZ5/V9nJ9B65ZpZeXjNZsgrM\nIoPXs37y59A3K6GsBkE9mFo9vjG62QBLcxPx02cW+dyzL1ywTxq+GXn1uKdvNqDS3ET89JlFFoGv\nzL7GkZe+13FP3YOp1ZOqpy9pi6RvSpqV9JklXr9b0p9Jek7S/5a0qeG190r6E0kzyT5vy/IAzIbV\ncr3w+iya921cxYjouqde/zn33PrjLu1URNuevqRRYBK4BZgDjkjaHxHHGnZ7PCIeSfbfCjwIbJG0\nAvhd4B9GxPOSLgPOZH0QZsMoTS983V9dyYrRERYWuu+pezC1WtKUd24AZiPiOICkfcA24FzoR8Qb\nDftfAudWhr0V+NOIeD7ZzwVDs5SWmxPfWPpZMSK237Cej1y31uFtbaUJ/TXAKw3bc8CNzTtJ2gnc\nA4wBH0ievhoISQeB1cC+iHigpxabVUirXnhj6WdhMXjXpW934Fsqmc3eiYjJiHg38Gng3uTpFcDf\nAj6e/PenJX2w+b2SdkiakjR18uTJrJpkNrTqpZ9R4QFY60ianv6rwLqG7bXJc63sAx5OHs8BX4qI\n1wAkHQCuA/6w8Q0RsRfYC7UrclO13KzCfLMR61aanv4RYKOkKySNAduB/Y07SNrYsHkb8GLy+CDw\nHkkrk0Hd99MwFmBmZvlq29OPiLOSdlEL8FHgsYiYkbQHmIqI/cAuSTdTm5kzD9yVvHde0oPUvjgC\nOBARX+zTsdgQ8xot5/OVtNatVBdnRcQB4EDTc7sbHn9qmff+LrVpm2ZdccBdyMsSW7d8Ra4NvKoE\nXP1sZnzlGPOnTi97VuMraa1bDn0beFUIuMazmcUAARdf1PqsxgO51i2Hvg28YQ+46RPzfO7ZF84F\nPtQGwNqd1fhKWuuGQ99KoUwBl3bQefrEPE8fneMLU69wZiEIaj38oDatbljPaqxYDn2zDKUddK7v\n99aZxXNrlowA79u4ig9d+2Nta/pm3XLom2Uo7aBzfb964AsYu2iEX775age99ZVD3yxDaQedG/cb\nHR3ho9ev5Q4vmGY58I3RzTLWSU1/WAenLX++MbpVXlHhm3bQuUyD0zY8HPo2lDodUPXVvlYVvjG6\nDaW0N/z2jcGtahz6lsr0iXkmD80yfWK+6Kakkna9ea9Lb1XjgVxrq6wlEA+oWpV4INcyU9YFzzyg\nanYhl3esrSqUQMpWvjLrlnv6FdFLCaMKC56VsXxl1g2HfgVkEWrDXAIpa/nKrBsu71SApyUur7l8\nNb5yzKUeG1ru6VdAFW5C0ovG8tX4yjH2PDPjUo8NLYd+BZS5Jt/pWES3Yxf18tXkoVmXemyoOfQr\noow1+U7HIpbaH+joS8BnRTbsHPo2cOq99Vf/8v8t2+tu7tU3j108fXSOp47OdVSqKfNZkVkaDn0b\nKI299RWjI6wYEQuLcUGve6lefXMvPaCrUk0Zz4rM0nLo20Bp7K0vLCyy/Yb1vOvSt1/Q615qRtLO\nm646r5cO8PTROZdqzBqkCn1JW4CHgFHg0Yi4v+n1u4GdwALwJrAjIo41vL4eOAbcFxH/OqO22xBq\n7q1/pMXdpFrV3pt76S7VmJ2v7YJrkkaBF4BbgDngCPCxplD/kYh4I3m8FfjFiNjS8PqTQABfbRf6\nXnDNvFCaWeeyXHDtBmA2Io4nP3gfsI1azx2AeuAnLoFz93tG0t8Hvg3833RNt6rzQmlm/ZPmitw1\nwCsN23PJc+eRtFPSt4AHgF9KnnsH8GngXyz3AZJ2SJqSNHXy5Mm0bTczsw5ltgxDRExGxLuphfy9\nydP3Af82It5s8969ETEREROrV6/OqklmZtYkTXnnVWBdw/ba5LlW9gEPJ49vBD4q6QHgUmBR0g8i\n4t9301gbbmlq9K7jm/UmTegfATZKuoJa2G8H7mzcQdLGiHgx2bwNeBEgIn6qYZ/7gDcd+LaUNFff\neglks961Le9ExFlgF3AQ+AbwRETMSNqTzNQB2CVpRtJzwD3AXX1rsQ2lNCuBerVQs96lmqcfEQeA\nA03P7W54/KkUP+O+Thtn1ZFmzRuvi2PWO98Y3QaGa/pm3fON0a100sy799x8s974zllmZhXi0LfC\nTZ+Y9+0JzXLi8o4VytMwzfLlnr4VytMwzfLl0LdC1adhjgpPwzTLgcs7VijfntAsXw79ChuUOe+e\nhmmWH4d+RXkA1ayaXNOvqE4GUD2l0mx4uKdfUWnXsfEZgdlwcehXVH0A9emjcyy3+tJSZwQOfbPy\ncnknB4NcHnnq6Bz7vvYyH3/08JLtG5QplYP8OzQrE/f0+2yQyyPtevH12T27b7+G+VOnC5vlM8i/\nQ7Oycej3Wb/LI71Mu1yurj9IQfv00TneOrNI4BKTWa8c+n3Wzxt/9BrMy10YlfYsoN+9/+kT83xh\n6pVz4w6jo75q16wXDv0+6+cVp72eRSwX3INyFnD4+OucXaxFvoCPXr/WvXyzHjj0c9CvK05bBXPa\nO1AtF9y9nAX08xjvuG5tXz7HrCoc+iW2VDCn7YWnCe5WX1bNQTy+cozJQ7N9KfV4bR6zbDn0B0g3\ndfLmYE7bC9985WWsGBFnFoLREXVUJ28M4vGVY+x5ZqavpR6vzWOWHYf+gMiqTt7RwLEERPLfztSD\nePLQrC/eMisRh/6ASNNDT3MmkLYccvj465xdqE2DXFjoPqzHV44xknx5eD18s8GXKvQlbQEeAkaB\nRyPi/qbX7wZ2AgvAm8COiDgm6RbgfmAMOA38WkT8UYbtL63mAG/XQ+/kTCBNOSSLqaTTJ+bZ88wM\nC4u1EtHu269xL99swLUNfUmjwCRwCzAHHJG0PyKONez2eEQ8kuy/FXgQ2AK8Bvy9iPgLSdcCB4E1\nGR/DwGsO+FYBvlwPPesZM1kMkNbbFEBEMH/qdNftMbN8pOnp3wDMRsRxAEn7gG3AudCPiDca9r8E\natfSRMTXG56fAd4u6eKIeKvXhpfFUgHfKsCX66H34yKvXgdI+3nhmZn1R5rQXwO80rA9B9zYvJOk\nncA91Eo5H1ji59wBHF0q8CXtAHYArF+/PkWTymOpgO8mLAdx6uIgtsnMlpfZQG5ETAKTku4E7gXu\nqr8m6Rrgs8CtLd67F9gLMDExsdxKv6WzVMB3G5aDOHVxENtkZq2lCf1XgXUN22uT51rZBzxc35C0\nFvhvwM9FxLe6aWSZtQp4h6WZFSFN6B8BNkq6glrYbwfubNxB0saIeDHZvA14MXn+UuCLwGci4iuZ\ntbpkHPBmNija3kQlIs4Cu6jNvPkG8EREzEjak8zUAdglaUbSc9Tq+vXSzi7gKmC3pOeSPz+a/WGY\nmVkaihisEvrExERMTU0V3Qwzs1KRNB0RE+328+0SzcwqxMswlEz9Qq/xlWOF3sLQzMrJoV8ijRd6\nLUbtpiIXX+R7xppZei7vlEjjhV7AefeMNTNLw6FfIvULvUaSlZBHwMsfmFlHXN4pkeabl7imb2ad\ncugPiLR3zfKFXmbWC4f+AMjqrlmDopvbPppZPhz6AyDrtfKLNGxfYGbDxgO5A6A+QDuq/g/MTp+Y\nZ/LQLNMn5vvy85f6AjOzweGefgt5lijyWpc+j164b6xiNtgc+ksookSRxwBtHmUk31jFbLA59Jcw\nTDX2Rnn1wj3DyGxwOfSXMKwlCvfCzcxLK7fgaYdmViZpl1Z2T7+FYStR+EvMzMChn6uigtdz582s\nzqGfkyKDd1gHps2sc5W7OKvfFye1UuRFS3le/GVmg61SPf0ie9tFzgjyrB0zq6tU6BdZ5ig6eIdt\nYNrMulOp0C96/r2D18yKVqnQL6q37emSZjYoUoW+pC3AQ8Ao8GhE3N/0+t3ATmABeBPYERHHktd+\nHfhE8tovRcTB7Jrfubx7254uaWaDpO3sHUmjwCTwIWAT8DFJm5p2ezwi3hMRfw14AHgwee8mYDtw\nDbAF+A/Jz6sMLzVsZoMkzZTNG4DZiDgeEaeBfcC2xh0i4o2GzUuA+toO24B9EfFWRHwbmE1+XmV4\nuqSZDZI05Z01wCsN23PAjc07SdoJ3AOMAR9oeO/hpveuWeK9O4AdAOvXr0/T7tIoetaOmVmjzC7O\niojJiHg38Gng3g7fuzciJiJiYvXq1V23oagLr9q5/vJxdt50lQPfzAqXpqf/KrCuYXtt8lwr+4CH\nu3xv1zxgambWXpqe/hFgo6QrJI1RG5jd37iDpI0Nm7cBLyaP9wPbJV0s6QpgI/C13pt9IQ+Ympm1\n17anHxFnJe0CDlKbsvlYRMxI2gNMRcR+YJekm4EzwDxwV/LeGUlPAMeAs8DOiFjox4EUfeGVmVkZ\nDNVNVHwRlJlVVSVvotJ44VXRXwBFf76Z2VKGKvTrih7ULfrzzcxaGcr19Ise1C36883MWhnK0C/6\nKtiiP9/MrJWhGshtVHRNvejPN7NqqeRAbqOi164v+vPNzJYylOUdMzNbmkN/CYO6hk83hulYzKx3\nQ1ve6dYwTbccpmMxs2y4p99kmKZbDtOxmFk2HPpNhmm65TAdi5llY2inbPZimKZbDtOxmFlrlZ+y\n2Ythmm45TMdiZr1zecfMrEIc+mZmFeLQ75DnvZtZmbmm3wHPezezsnNPvwOe925mZefQ74DnvZtZ\n2bm804HrLx/n85/c7HnvZlZaDv0Oed67mZWZyztmZhXi0Dczq5BUoS9pi6RvSpqV9JklXr9H0jFJ\nfyrpDyVd3vDaA5JmJH1D0r+TpCwPwMzM0msb+pJGgUngQ8Am4GOSNjXt9nVgIiLeCzwJPJC8928C\n7wPeC1wL/A3g/Zm13szMOpKmp38DMBsRxyPiNLAP2Na4Q0QciohTyeZhYG39JeBtwBhwMXAR8H+y\naLiZmXUuTeivAV5p2J5LnmvlE8AfAETEnwCHgO8kfw5GxDea3yBph6QpSVMnT55M23YzM+tQplM2\nJf0sMEFSwpF0FfAT/LDn/78k/VREfLnxfRGxF9ibvOekpBNdNmEV8FqX7y2rKh4zVPO4q3jMUM3j\n7uaYL2+/S7rQfxVY17C9NnnuPJJuBv4Z8P6IeCt5+qeBwxHxZrLPHwA/CXy5+f11EbE6TcOXImkq\nzU0EhkkVjxmqedxVPGao5nH385jTlHeOABslXSFpDNgO7G9q4F8H/iOwNSK+2/DSy8D7Ja2QdBG1\nM4ALyjtmZpaPtqEfEWeBXcBBaoH9RETMSNojaWuy228C7wC+IOk5SfUvhSeBbwF/BjwPPB8R/yPr\ngzAzs3RS1fQj4gBwoOm53Q2Pb27xvgXgn/TSwA7tzfGzBkUVjxmqedxVPGao5nH37ZgH7sboZmbW\nP16GwcysQkoZ+imWhbhY0u8nr39V0ob8W5mtXpbCKKt2x9yw3x2SQtJQzPBIc9yS/kHy9z0j6fG8\n25i1FP++10s6JOnryb/xDxfRzixJekzSdyX9eYvXlSxdM5sc83WZfHBElOoPMEptcPhKalf6Pg9s\natrnF4FHksfbgd8vut05HPNNwMrk8S9U4ZiT/d4JfInaleATRbc7p7/rjdSWPhlPtn+06HbncMx7\ngV9IHm8CXiq63Rkc998GrgP+vMXrH6Z2oauAzcBXs/jcMvb02y4LkWz/1+Txk8AHS77QWy9LYZRV\nmr9ngN8APgv8IM/G9VGa4/7HwGREzAPE+dOkyyjNMQfwI8njvwL8RY7t64uI+BLwvWV22Qb8dtQc\nBi6V9GO9fm4ZQz/NshDn9onalNPvA2W+t2HXS2GUWNtjTk5310XEF/NsWJ+l+bu+Grha0lckHZa0\nJbfW9UeaY74P+FlJc9RmEv7TfJpWqE7/v0/Fd84aMs1LYQwrSSPAg8DPF9yUIqygVuL5O9TO6L4k\n6T0R8ZeFtqq/Pgb8l4j4N5J+EvgdSddGxGLRDSubMvb00ywLcW4fSSuonQ6+nkvr+qPTpTC2xg+X\nwiirdsf8TmrLdf+xpJeo1Tz3D8Fgbpq/6zlgf0SciYhvAy9Q+xIoqzTH/AngCTi3kOPbqK1PM8xS\n/X/fqTKGfttlIZLtu5LHHwX+KJKRkZLqZSmMslr2mCPi+xGxKiI2RMQGauMYWyNiqpjmZibNv+//\nTq2Xj6RV1Mo9x/NsZMbSHPPLwAcBJP0EtdAf9iV59wM/l8zi2Qx8PyK+0+sPLV15JyLOSqovCzEK\nPBbJshDAVETsB/4ztdO/WWoDJduLa3HvUh5z41IYAC9HxNaWP3TApTzmoZPyuA8Ct0o6BiwAvxYR\npT2TTXnMvwr8J0m/Qm1Q9+dL3pFD0u9R+/JelYxV/HNq9xwhIh6hNnbxYWAWOAX8o0w+t+S/NzMz\n60AZyztmZtYlh76ZWYU49M3MKsShb2ZWIQ59M7MKceibmVWIQ9/MrEIc+mZmFfL/Ac5n3V1RCe6F\nAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10fba6d68>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 1.2 Create input data using NumPy. y = x * 0.1 + 0.3 + noise\n",
     "x_data = np.random.rand(100).astype(np.float32)\n",
@@ -37,16 +65,27 @@
     "y_data = x_data * 0.1 + 0.3 + noise\n",
     "\n",
     "# Uncomment the following line to plot our input data.\n",
-    "# pylab.plot(x_data, y_data, '.')"
+    "pylab.plot(x_data, y_data, '.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"Variable/read:0\", shape=(1,), dtype=float32)\n",
+      "Tensor(\"Variable_1/read:0\", shape=(1,), dtype=float32)\n"
+     ]
+    }
+   ],
    "source": [
     "# 1.3 Buld inference graph.\n",
     "# Create Variables W and b that compute y_data = W * x_data + b\n",
@@ -55,8 +94,56 @@
     "y = W * x_data + b\n",
     "\n",
     "# Uncomment the following lines to see W and b are.\n",
-    "# print(W)\n",
-    "# print(b)"
+    "print(W)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-4-be4f7feeb9ee>:5: initialize_all_variables (from tensorflow.python.ops.variables) is deprecated and will be removed after 2017-03-02.\n",
+      "Instructions for updating:\n",
+      "Use `tf.global_variables_initializer` instead.\n",
+      "loss: Tensor(\"Mean:0\", shape=(), dtype=float32)\n",
+      "optimizer: <tensorflow.python.training.gradient_descent.GradientDescentOptimizer object at 0x10fccd940>\n",
+      "train: name: \"GradientDescent\"\n",
+      "op: \"NoOp\"\n",
+      "input: \"^GradientDescent/update_Variable/ApplyGradientDescent\"\n",
+      "input: \"^GradientDescent/update_Variable_1/ApplyGradientDescent\"\n",
+      "\n",
+      "name: \"init\"\n",
+      "op: \"NoOp\"\n",
+      "input: \"^Variable/Assign\"\n",
+      "input: \"^Variable_1/Assign\"\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1.4 Build training graph.\n",
+    "loss = tf.reduce_mean(tf.square(y - y_data))  # Create an operation that calculates loss.\n",
+    "optimizer = tf.train.GradientDescentOptimizer(0.5)  # Create an optimizer.\n",
+    "train = optimizer.minimize(loss)  # Create an operation that minimizes loss.\n",
+    "#init = tf.initialize_all_variables()  # Create an operation initializes all the variables.\n",
+    "init = tf.global_variables_initializer()  # Create an operation initializes all the variables.\n",
+    "\n",
+    "\n",
+    "# Uncomment the following 3 lines to see what 'loss', 'optimizer' and 'train' are.\n",
+    "print(\"loss:\", loss)\n",
+    "print(\"optimizer:\", optimizer)\n",
+    "print(\"train:\", train)\n",
+    "print(init)"
    ]
   },
   {
@@ -64,28 +151,8 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# 1.4 Build training graph.\n",
-    "loss = tf.reduce_mean(tf.square(y - y_data))  # Create an operation that calculates loss.\n",
-    "optimizer = tf.train.GradientDescentOptimizer(0.5)  # Create an optimizer.\n",
-    "train = optimizer.minimize(loss)  # Create an operation that minimizes loss.\n",
-    "init = tf.initialize_all_variables()  # Create an operation initializes all the variables.\n",
-    "\n",
-    "# Uncomment the following 3 lines to see what 'loss', 'optimizer' and 'train' are.\n",
-    "# print(\"loss:\", loss)\n",
-    "# print(\"optimizer:\", optimizer)\n",
-    "# print(\"train:\", train)\n",
-    "# print(init)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -97,7 +164,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -114,7 +183,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -132,7 +203,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -146,7 +219,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "<p>Back to [0_tf_hello_world.ipynb](0_tf_hello_world.ipynb).</p>\n",
     "<p>Next to [2_mnist.ipynb](2_mnist.ipynb).</p>"
@@ -155,21 +231,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
